Separate the template and constant type functions
Constant type functions can be separated into a *.cc file
in order to avoid recompiling them. The template functions
on the other hand, have to remain in the header file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(fdp)
 
-add_executable(fdp main.cc)
+add_executable(fdp main.cc fdgrid.cc utilities.cc cons_law.cc)
 
 install(TARGETS fdp RUNTIME DESTINATION bin)
