Add Monomial basis for Finite Elements
Define class of 1D monomials and Polynomial basis
Monomials can be evaluated and differentiated
Polynomial basis are generated with the monomials
they can be evaluated also

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ project(fdp)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x")
 
-add_executable(fdp main.cc fdgrid.cc utilities.cc cons_law.cc)
+add_executable(fdp  fdgrid.cc utilities.cc cons_law.cc PolySet.cc PolyTester.cc)
 
 install(TARGETS fdp RUNTIME DESTINATION bin)
