--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ project(fdp)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x")
 
-add_executable(fdp  fdgrid.cc utilities.cc cons_law.cc PolySet.cc PolyTester.cc)
+#PolyTester.cc
+add_executable(fdp  fdgrid.cc utilities.cc cons_law.cc PolySet.cc main.cc)
 
 install(TARGETS fdp RUNTIME DESTINATION bin)
