Recursive Legendre basis generator added
A function to generate the Legendre polynomial basis recursively was
added, storing them in a vector of double vectors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(fdp)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x")
 
-#PolyTester.cc 
-add_executable(fdp  main.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc )
+#main.cc 
+add_executable(fdp  PolyTester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc )
 
 install(TARGETS fdp RUNTIME DESTINATION bin)
