--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(fdp)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x")
 
-#main.cc 
-add_executable(fdp  PolyTester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc )
+# function_tester.cc main.cc
+add_executable(fdp PolyTester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc )
 
 install(TARGETS fdp RUNTIME DESTINATION bin)
