Add Gauss Quadrature rules until 5 points (wiki)
Gauss quadrature formula added giving the quadrature nodes (as they
appear in wiki) and the respective weight values for one dimension.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(fdp)
 set(CMAKE_CXX_FLAGS "-std=c++0x")
 
 # function_tester.cc main.cc
-add_executable(fdp PolyTester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc )
+add_executable(fdp PolyTester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc Quadratures.cc)
 
 install(TARGETS fdp RUNTIME DESTINATION bin)
