Add Quadrature.cc.o object

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(fdp)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x")
 
-#  main.cc PolyTester.cc
-add_executable(fdp function_tester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc )
+#  main.cc function_tester.cc 
+add_executable(fdp PolyTester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc Quadratures.cc)
 
 install(TARGETS fdp RUNTIME DESTINATION bin)
