Quadrature nodes and coefficients working
Also mapping to 1D computational domain

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(fdp)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x")
 
-# function_tester.cc PolyTester.cc try_burgers.cc output_fns.cc main.cc Quadratures.cc
-add_executable(fdp function_tester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc )
+# function_tester.cc PolyTester.cc try_burgers.cc output_fns.cc main.cc 
+add_executable(fdp function_tester.cc fdgrid.cc utilities.cc cons_law.cc PolySet.cc Quadratures.cc)
 
 install(TARGETS fdp RUNTIME DESTINATION bin)
